# solignition-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: publish-crates.yml  release.yml
npm/binaries/darwin-arm64/: package.json
npm/binaries/darwin-x64/: package.json
npm/binaries/linux-arm64/: package.json
npm/binaries/linux-x64/: package.json
npm/binaries/win32-x64/: package.json
npm/cli/: README.md  bin.js  package.json
npm/scripts/: stage-binaries.mjs
src/: client.rs  config.rs  display.rs  main.rs  solana_ops.rs
wix/: main.wxs
