[package]
name = "solignition-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for deploying Solana programs via the Solignition lending protocol"
license = "MIT"
authors = ["Jesse Ely"]
readme = "README.md"
repository = "https://www.solignition.xyz/"

[[bin]]
name = "solignition"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Solana SDK (use compatible versions)
solana-sdk = "2.2"
solana-client = "2.2"

# Utilities
bs58 = "0.5"
dirs = "6"
toml = "0.8"
colored = "3"
indicatif = { version = "0.17", features = ["tokio"] }
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
