[package]
name = "solignition-cli"
version = "1.0.0"
edition = "2021"
description = "CLI tool for deploying Solana programs via the Solignition lending protocol"
license = "MIT"
readme = "README.md"
authors = ["Jesse Ely"]
repository = "https://github.com/Peacanduck/solignition-cli"
homepage = "https://www.solignition.xyz/"
keywords = ["solana", "deploy", "cli", "defi", "lending"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
rust-version = "1.75"

[package.metadata.wix]
upgrade-guid = "82AAA26F-A6F7-4936-B3F3-29DD16F7EA7A"
path-guid = "C435145C-85CB-4314-BC30-1AC1F9BDE4F9"
license = false
eula = false

[[bin]]
name = "solignition"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Solana SDK (use compatible versions)
solana-sdk = "2.2"
solana-client = "2.2"
solana-system-interface = "1"

# Utilities
bs58 = "0.5"
dirs = "6"
toml = "0.8"
colored = "3"
indicatif = { version = "0.17", features = ["tokio"] }
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
